--- a/SmartGeometry/bin/AndroidManifest.xml
+++ b/SmartGeometry/bin/AndroidManifest.xml
@@ -1,14 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sg.main"
+    package="com.sg.property"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="15" />
+    <uses-sdk android:minSdkVersion="8" />
+    
+    <uses-permission android:name="android.permission.BLUETOOTH"/>
+	<uses-permission android:name="android.permission.BLUETOOTH_ADMIN"/>
+    
+    <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <!-- 往SDCard写入数据权限 --> 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <application android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher">
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
+        <!-- "landscape"横向,"portrait"是纵向 -->
+        <activity
+            android:screenOrientation="landscape"
+            android:name="com.sg.main.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+            <intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="file" />  
+				<data android:host="*" />  
+				<data android:pathPattern=".*\\.jsg" />  
+			</intent-filter>
+        </activity>
+        <activity 
+            android:name="com.sg.main.FileExplorerActivity" 
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
+        <activity 
+            android:name="com.sg.bluetooth.DeviceListActivity" 
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
     </application>
 
 </manifest>
